welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:4: error: reassignment to val
  	c = c + 1
          ^countTeen:6: error: value += is not a member of Int
  	c += 1
          ^countTeen:8: error: value += is not a member of Int
  	c += 1
          ^countTeen:10: error: value += is not a member of Int
  	c += 1
          ^